@@ -78,6 +78,11 @@ Options for action "\fBlist\fR":
 Only show transports with given status. Valid values are "\fIrunning\fR", "\fIstopped\fR" and "\fIunknown\fR"
 .sp
 .RE
+\fB\-\-machine-readable\fR
+.RS 4
+Output data as comma-seperated values.
+.sp
+.RE
 .RE
 Options for action "\fBstart\fR":
 .sp
